<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_margin="15dp"
        android:id="@+id/rl_login_div"
        android:padding="15dp"
        android:background="@drawable/background_login_div"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/ll_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:textSize="18sp"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account"
                style="@style/normalText"/>

            <EditText

                android:hint="学号或手机"
                android:maxLines="1"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_psw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_username"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:textSize="18sp"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/psw"
                style="@style/normalText"/>

            <EditText
                android:id="@+id/et_psw"
                android:maxLines="1"
                android:imeOptions="actionDone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_touchable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_psw">

            <Button
                android:textColor="@color/black"
                android:layout_weight="1"
                android:id="@+id/bt_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/login"
                android:background="@drawable/buttonstyle"
                android:onClick="clickLogin"/>

            <CheckBox
                android:layout_weight="1"
                android:id="@+id/cb_remember_psw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/remember_psw" />


        </LinearLayout>

    </RelativeLayout>

    <TextView
        android:layout_below="@id/rl_login_div"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:layout_marginStart="15dp"
        android:text="@string/no_acc_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_err"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_login_div"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textColor="@color/red" />

</RelativeLayout>